<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/matches_home_linear_main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragment.matcheshome.MatchesHomeFragment">

    <android.support.design.widget.TabLayout
        android:id="@+id/matches_home_tab_layout"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary"
        app:tabGravity="fill"
        app:tabMode="fixed"
        app:tabSelectedTextColor="@android:color/white"
        app:tabTextColor="@android:color/white"/>

    <android.support.v4.view.ViewPager
        android:id="@+id/matches_home_viewpager"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</LinearLayout>