...
            <android.support.v4.widget.SwipeRefreshLayout
                android:id="@+id/next_matches_swipe_refresh"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/next_matches_rv_matches"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingBottom="50dp"
                    android:clipToPadding="false"/>

            </android.support.v4.widget.SwipeRefreshLayout>
...
