<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/teams_home_coordinator_main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragment.teamshome.TeamsHomeFragment">

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
...
            <android.support.v4.widget.SwipeRefreshLayout
                android:id="@+id/teams_home_swipe_refresh"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/teams_home_rv_matches"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingBottom="50dp"
                    android:clipToPadding="false"/>

            </android.support.v4.widget.SwipeRefreshLayout>
...
